[package]
name = "plunger-api"
version = "0.1.0"
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
probe-rs = { git = "https://github.com/probe-rs/probe-rs", branch = "master" }
rocket-multipart-form-data = { git = "https://github.com/magiclen/rocket-multipart-form-data" }
thiserror = "1.0"
anyhow = "1.0"
clap = "3.0.0-beta.2"
rusb = "0.8"
radix_fmt = "1.0.0"
dotenv = "0.15.0"
